force-app/main/default/objects/invoices__x/fields/billAmount__c.field-meta.xml
<CustomField>
    <fullName>billAmount__c</fullName>
    <label>billAmount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>