force-app/main/default/objects/invoices__x/fields/BillDate__c.field-meta.xml
<CustomField>
    <fullName>BillDate__c</fullName>
    <label>BillDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>