force-app/main/default/objects/invoices__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>