force-app/main/default/objects/invoices__x/fields/invoiceId__c.field-meta.xml
<CustomField>
    <fullName>invoiceId__c</fullName>
    <label>invoiceId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>